--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 </head>
 
 <body>
-
+    <div class="heading">Calculator</div>
+    <div class="display">569
+    </div>
+    <div class="buttons">
+        <button class="percentage">%</button>
+        <button class="clear">AC</button>
+        <button class="signChange">+/-</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>0</button>
+        <button>.</button>
+        <button class="divide">/</button>
+        <button class="divide">*</button>
+        <button class="divide">-</button>
+        <button class="divide">+</button>
+        <button class="divide">=</button>
+    </div>
 </body>
 
 </html>
