--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         <button class="percentage">%</button>
         <button class="clear">AC</button>
         <button class="signChange">+/-</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>0</button>
-        <button>.</button>
-        <button class="divide">/</button>
-        <button class="divide">*</button>
-        <button class="divide">-</button>
-        <button class="divide">+</button>
-        <button class="divide">=</button>
+        <button class="number" value="7">7</button>
+        <button class="number" value="8">8</button>
+        <button class="number" value="9">9</button>
+        <button class="number" value="4">4</button>
+        <button class="number" value="5">5</button>
+        <button class="number" value="6">6</button>
+        <button class="number" value="1">1</button>
+        <button class="number" value="2">2</button>
+        <button class="number" value="3">3</button>
+        <button class="number" value="0">0</button>
+        <button class="number" value=".">.</button>
+        <button class="operator" value="/">/</button>
+        <button class="operator" value="*">*</button>
+        <button class="operator" value="-">-</button>
+        <button class="operator" value="+">+</button>
+        <button class="operator" value="=">=</button>
     </div>
 </body>
 
