Add a CSS file for styling
Add Css file and update html file for alighnment

--- a/index.html
+++ b/index.html
@@ -5,33 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
+    <link rel ="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="heading">Calculator</div>
+    <div class="container">
     <div class="display">569
     </div>
     <div class="buttons">
-        <button class="percentage">%</button>
-        <button class="clear">AC</button>
-        <button class="signChange">+/-</button>
-        <button class="number" value="7">7</button>
-        <button class="number" value="8">8</button>
-        <button class="number" value="9">9</button>
-        <button class="number" value="4">4</button>
-        <button class="number" value="5">5</button>
-        <button class="number" value="6">6</button>
-        <button class="number" value="1">1</button>
-        <button class="number" value="2">2</button>
-        <button class="number" value="3">3</button>
-        <button class="number" value="0">0</button>
-        <button class="number" value=".">.</button>
+        <div class="numButtons">
+            <div class="row1">
+                <button class="percentage">%</button>
+                <button class="clear">AC</button>
+                <button class="signChange">+/-</button>
+            </div>
+            <div class="row2">
+                <button class="number" value="7">7</button>
+                <button class="number" value="8">8</button>
+                <button class="number" value="9">9</button>
+            </div>
+            <div class="row3">
+                <button class="number" value="4">4</button>
+                <button class="number" value="5">5</button>
+                <button class="number" value="6">6</button>
+            </div>
+            <div class="row4">
+                <button class="number" value="1">1</button>
+                <button class="number" value="2">2</button>
+                <button class="number" value="3">3</button>
+            </div>
+            <div class="row5">
+                <button class="number" id = "zero" value="0">0</button>
+                <button class="number" value=".">.</button>
+            </div>
+        </div>
+        <div class="oprButtons">
         <button class="operator" value="/">/</button>
         <button class="operator" value="*">*</button>
         <button class="operator" value="-">-</button>
         <button class="operator" value="+">+</button>
         <button class="operator" value="=">=</button>
+        </div>
+    </div>
     </div>
 </body>
 
